--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ Ul{
 }
 
 h1{
-    color: white;
+    color: rgb(225, 225, 225);
 }
 
 .allmenu{
@@ -79,4 +79,28 @@ h1{
 .maim_text{
     position: relative; 
     z-index: 1;
+}
+
+footer {
+    width: 100%;
+    height: 8vw;
+    background-color: black;
+}
+
+footer > p{
+    margin-top:0;
+    margin-left: 2vw;
+    color: white
+}
+
+footer > p > span{
+    margin-top: center;
+}
+
+body {
+    background-color: black;
+}
+
+.main_text {
+    background-color: aliceblue;
 }
