--- a/css/홀리워크.style.css
+++ b/css/홀리워크.style.css
@@ -1,5 +1,5 @@
 .intro_img{
-    background-image: url('../photo/IMG_6388.HEIC');
+    background-image: url('../photo/홀리워크.jpeg');
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
@@ -9,7 +9,7 @@
 }
 
 h2 {
-   color: aliceblue; 
+   color: rgb(255, 255, 255); 
    font-size: 80px;
    margin-left: 2vw;
    margin-top: 42vw;
