--- a/css/end.style.css
+++ b/css/end.style.css
@@ -1,5 +1,5 @@
 .intro_img{
-    background-image: url('../photo/정책제안.png');
+    background-image: url('../photo/빈곤 마인드맵.png');
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
