--- a/css/web.style.css
+++ b/css/web.style.css
@@ -1,5 +1,5 @@
 .intro_img{
-    background-image: url('../photo/인트라넷.png');
+    background-image: url('.../photo/인트라넷.png');
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
