--- a/css/web.style.css
+++ b/css/web.style.css
@@ -1,5 +1,5 @@
 .intro_img{
-    background-image: url('photo/인트라넷.png');
+    background-image: url('https://ifh.cc/g/6Zmmj7.jpg');
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
